--- a/index.html
+++ b/index.html
@@ -24,11 +24,23 @@
                 <li class="logonav"><a href="#"><i class="bi bi-instagram"></i></a></li>
                 <li class="logonav"><a href="#"><i class="bi bi-facebook"></i></a></li>
                 <li class="logonav"><a href="#"><i class="bi bi-whatsapp"></i></a></li>
-
+                <li class="logonav" ><a href="#" id="botaoMenu"><i class="bi bi-list"></i></i></a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <div class="barralateral" id="barralateral">
+            <ul>
+                <li class="textobar"><a href="#sobrenos">Sobre Nós</a></li>
+                <div class="dotted-linel"></div>
+                <li class="textobar"><a href="#servicos">Serviços</a></li>
+                <div class="dotted-linel"></div>
+                <li class="textobar"><a href="#ambiente">Nosso Ambiente</a></li>
+                <div class="dotted-linel"></div>
+                <li class="textobar"><a href="#conteudofooter">Contato</a></li>
+                <div class="dotted-linel"></div>
+            </ul>
+        </div>
         <div class="carrossel">
             <div class="areabanner" id="img">
                 <img src="Imagens/1.png" alt="" id="imgbanner">
